--- a/css/main.css
+++ b/css/main.css
@@ -226,6 +226,7 @@ main ul li:not(.active) a:hover{
     width: 90%;
 }
 .gallery_item{
+    width: 100%;
     box-shadow:0px 0px 10px 0px gray;
 }
 .endline{
