--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,9 @@
 @font-face {
     font-family: 'CoFo Holz VF';
-    src: local('CoFo Holz VF'), url(https://karmazinwlad.github.io/Oktyabr/font/cofoholzvf.ttf) format('ttf'),
-    url(https://karmazinwlad.github.io/Oktyabr/font/cofoholzvf.woff) format('woff');
+    src: local('CoFo Holz VF'), url(C:\Users\karma\Desktop\www\font\cofoholzvf.ttf) format('ttf'),
+    url(C:\Users\karma\Desktop\www\font\cofoholzvf.woff2) format('woff2'),
+    url(C:\Users\karma\Desktop\www\font\cofoholzvf.woff) format('woff'),
+    url(C:\Users\karma\Desktop\www\font\cofoholzvf.eot) format('eot');
 }
 
 * {
@@ -174,6 +176,7 @@ header nav div.line{
     .MainMenu{display: none;}
 }
 main{
+    position: relative;
     margin-top: 145.67px;
     margin-left: 16px;
     margin-right: 23px;
@@ -271,4 +274,60 @@ main ul li:not(.active) a:hover{
 }
 .cont section{
     position: relative;
+}
+.example{
+    position: relative;
+}
+.overflow{
+    width: 100%;
+    overflow: hidden;
+    overflow-x: scroll;
+    margin-bottom: 10px;
+}
+.art{
+    display: flex;
+    width: 150%;
+    height: auto;
+    overflow: hidden;
+}
+.art div{
+    width: auto;
+    height: 50dvh;
+    padding: 0;
+    padding-right: 1%;
+}
+.art div img{
+    height: 100%;
+    width: auto;
+}
+.auth{
+    position: relative;
+    padding: 0;
+    width: 50%;
+    height: auto;
+    text-transform: uppercase;
+    font-size:medium;
+    font-weight: 500;
+    letter-spacing: 1px;
+}
+.spisok{
+    position: relative;
+    width: 100%;
+    height: 46px;
+}
+.spisok li{
+    padding-top: 10px;
+    padding-bottom: 20px;
+}
+.ul a{
+    font-size:small;
+    font-weight: 500;
+}
+.Line{
+    margin-top: 10px;
+    display: block;
+    height: 1.5px;
+    width: 100%;
+    background-color: black;
+    margin-bottom: 10px;
 }
