--- a/css/main.css
+++ b/css/main.css
@@ -41,8 +41,9 @@ header nav{
     width: 100%;
 }
 header nav ul.first{
-    font-size: 15px;
+    font-size: medium;
     width: 40%;
+    height: auto;
 }
 header nav .favorite{
     float:right;
@@ -149,6 +150,7 @@ header nav ul div.arrow-2 div::before{
 header nav div.line{
     content: '';
     display: block;
+    margin-bottom: 0;
     height: 0.5px;
     width: all;
     background-color: black;
@@ -174,6 +176,11 @@ header nav div.line{
 @media screen and (max-width: 1000px) {
     .burgerMenu{display: flex;}
     .MainMenu{display: none;}
+}
+@media screen and (max-width: 400px) {
+    .line1{display: none;}
+    .endline{display: none;}
+    .actual{display: none;}
 }
 main{
     position: relative;
@@ -323,11 +330,20 @@ main ul li:not(.active) a:hover{
     font-size:small;
     font-weight: 500;
 }
-.Line{
+main .Line{
     margin-top: 10px;
     display: block;
     height: 1.5px;
     width: 100%;
     background-color: black;
     margin-bottom: 10px;
+}
+.ecspo{
+    margin-left: 0;
+    margin-right: 0;
+    width: 100%;
+}
+iframe{
+    width: 100%;
+    height: 60dvh;
 }
