--- a/css/main.css
+++ b/css/main.css
@@ -318,6 +318,8 @@ main ul li:not(.active) a:hover{
     position: relative;
     width: 100%;
     height: 46px;
+    overflow: hidden;
+    overflow-x: scroll;
 }
 .spisok li{
     padding-top: 10px;
