--- a/css/main.css
+++ b/css/main.css
@@ -177,7 +177,7 @@ header nav div.line{
     .burgerMenu{display: flex;}
     .MainMenu{display: none;}
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
     .line1{display: none;}
     .endline{display: none;}
     .actual{display: none;}
@@ -341,7 +341,13 @@ main .Line{
 .ecspo{
     margin-left: 0;
     margin-right: 0;
-    width: 100%;
+    overflow: hidden;
+    overflow-y: scroll;
+    overflow-x: scroll;
+}
+#map{
+    min-width: 100%;
+    min-height: 100%;
 }
 iframe{
     width: 100%;
