--- a/css/main.css
+++ b/css/main.css
@@ -322,10 +322,63 @@ main ul li:not(.active) a:hover{
     height: auto;
     overflow: hidden;
     overflow-x: scroll;
+    z-index: 1;
 }
-.spisok li{
-    padding-top: 10px;
-    padding-bottom: 20px;
+.spisok ul{
+    border: 1.5px, solid, black;
+    border-left: 0;
+    border-right: 0;
+    border-top: 0;
+    width: 100%;
+    background-color: white;
+    padding-top: 15px;
+    margin-bottom: 15px;
+    padding-bottom: 15px;
+}
+.spisok ul li{
+    padding-top: 0px;
+    padding-bottom: 0px;
+    padding-right: 0px;
+    display: inline;
+    width: min-content;
+}
+#burgerSpisok{
+    position: fixed;
+}
+.galochka{
+    position: absolute;
+    background: 
+    linear-gradient(30deg, transparent 70%, white 50%, white 50%) no-repeat -24.5px 2px,
+    linear-gradient(-30deg, transparent 70%, white 50%, white 50%) no-repeat 23px 2px;
+    background-color: transparent;
+    right: 50%;
+    bottom: 0px;
+    width: 48px;
+    height: 20px;
+}
+#burgerSpisok .galochka{
+    right: calc(50% + 19.5px);
+}
+.galochka div::after{
+    content: '';
+    display: block;
+    height: 1.5px;
+    width: 25px;
+    background-color: black;
+    top: 10px;
+    position: absolute;
+    transform: rotate(30deg);
+}
+.galochka div::before{
+    content: '';    
+    display: block;
+    height: 1.5px;
+    width: 25px;
+    background-color: black;
+    left: 21px;
+    top: 10px;
+    position: absolute;
+    transform: rotate(-30deg);
 }
 .ul a{
     font-size:small;
