--- a/css/main.css
+++ b/css/main.css
@@ -296,7 +296,6 @@ main ul li:not(.active) a:hover{
 }
 .art{
     display: flex;
-    width: 100%;
     height: auto;
     overflow: hidden;
 }
@@ -343,6 +342,7 @@ main ul li:not(.active) a:hover{
 }
 #burgerSpisok{
     position: fixed;
+    top: 0px;
 }
 .galochka{
     position: absolute;
@@ -399,10 +399,34 @@ main .Line{
     overflow-x: scroll;
 }
 #map{
-    min-width: 100%;
-    min-height: 100%;
+    overflow: hidden;
+    overflow-y: scroll;
+    overflow-x: scroll;
 }
 iframe{
     width: 100%;
     height: 60dvh;
+}
+#storage li{
+    position: relative;
+    padding-right: 10px;
+    padding-bottom: 0px;
+}
+#storage{
+    position: relative;
+    float: left;
+    justify-content: flex-start;
+    width: max-content;
+    overflow: hidden;
+    overflow-x: scroll;
+    height:auto;
+}
+#storage section{
+    position: relative;
+}
+#storage img:not(.heart){
+    height: 60dvh;
+}
+#storage .year{
+    margin-bottom: 0px;
 }
