--- a/css/main.css
+++ b/css/main.css
@@ -397,6 +397,7 @@ main .Line{
     overflow: hidden;
     overflow-y: scroll;
     overflow-x: scroll;
+    width: 100%;
 }
 #map{
     overflow: hidden;
