--- a/css/main.css
+++ b/css/main.css
@@ -178,19 +178,25 @@ header nav div.line{
     .MainMenu{display: none;}
 }
 @media screen and (max-width: 500px) {
+    .line3{display: none;}
     .line1{display: none;}
     .endline{display: none;}
     .actual{display: none;}
-    .line2{margin-right: 10px; margin-left: 10px;}
+    .line2{margin-right: 10px; margin-left: 10px; margin-top: 160px;}
     .art img{height: 35dvh;}
     .contact{width: 100%;}
+    .heart{opacity: 100%;}
 }
-main{
+main:not(.ecs){
     position: relative;
     margin-top: 145.67px;
     margin-left: 16px;
     margin-right: 23px;
     z-index: 0;
+}
+main.ecs{
+    position: relative;
+    margin-top: 145.67px;
 }
 main.gallery{
     margin-left: 0;
@@ -239,10 +245,10 @@ main ul li:not(.active) a:hover{
     width: 90%;
 }
 .gallery_item{
-    width: 100%;
     box-shadow:0px 0px 10px 0px gray;
 }
 .endline{
+    margin-top: 160px;
     width: 90%;
 }
 .author{
@@ -269,7 +275,7 @@ main ul li:not(.active) a:hover{
     padding: 0;
     width: 100%;
 }
-.line1{
+.line2{
     margin-top: 160px;
 }
 .heart{
@@ -318,10 +324,10 @@ main ul li:not(.active) a:hover{
 .spisok{
     position: relative;
     width: 100%;
-    height: auto;
+    height: max-content;
+    z-index: 1;
     overflow: hidden;
     overflow-x: scroll;
-    z-index: 1;
 }
 .spisok ul{
     border: 1.5px, solid, black;
@@ -329,20 +335,26 @@ main ul li:not(.active) a:hover{
     border-right: 0;
     border-top: 0;
     width: 100%;
-    background-color: white;
-    padding-top: 15px;
     margin-bottom: 15px;
-    padding-bottom: 15px;
+    overflow: hidden;
+    overflow-x: scroll;
+    background-color: white;
 }
 .spisok ul li{
     padding-top: 0px;
     padding-bottom: 0px;
+    padding-top: 15px;
+    padding-bottom: 15px;
     display: inline;
     width: min-content;
+    background-color: white;
 }
 #burgerSpisok{
     position: fixed;
     top: 0px;
+    width: 100%;
+    overflow: visible;
+    overflow-x: scroll;
 }
 .galochka{
     position: absolute;
@@ -391,18 +403,16 @@ main .Line{
     background-color: black;
     margin-bottom: 10px;
 }
+.ecs{
+    overflow: hidden;
+    overflow-y: scroll;
+    overflow-x: scroll;
+}
 .ecspo{
     margin-left: 0;
     margin-right: 0;
-    overflow: hidden;
-    overflow-y: scroll;
-    overflow-x: scroll;
-    width: 100%;
-}
-#map{
-    overflow: hidden;
-    overflow-y: scroll;
-    overflow-x: scroll;
+    width: max-content;
+    height: max-content;
 }
 iframe{
     width: 100%;
@@ -413,13 +423,17 @@ iframe{
     padding-right: 10px;
     padding-bottom: 0px;
 }
+.fav{
+    width: 100%;
+    overflow: hidden;
+    overflow-x: scroll;
+    overflow-y: scroll;
+}
 #storage{
     position: relative;
     float: left;
     justify-content: flex-start;
     width: max-content;
-    overflow: hidden;
-    overflow-x: scroll;
     height:auto;
 }
 #storage section{
